--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,15 @@
         <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
     
+    <error-page>
+        <error-code>403</error-code>
+        <location>/errors/access.xhtml</location>
+    </error-page>
+    
+    <error-page>
+        <location>/errors/error.xhtml</location>
+    </error-page>
+    
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Admin Only Content</web-resource-name>
